Bug 1340147 - Correctly name default function exports as "default". r=jonco